# backend-click-game

./: .gitignore  Cargo.toml  Dockerfile  data.db  docker-compose.yml
k6/: load_test.js  summary.json
k8s/: deployment.yaml  infrastructure.yaml  service.yaml
migrations/: 20260412185717_init_schema.sql
src/: config.rs  helpers.rs  main.rs
src/services/: config.rs  handlers.rs  mod.rs  routes.rs
src/ws/: config.rs  handlers.rs  main.rs  mod.rs
